--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,8 @@
    
     <title>React App</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css">
+    <!--FUENTES-->
+    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Nunito+Sans:ital,wght@0,400;1,200&family=Roboto+Condensed:wght@300&family=Wendy+One&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
